[package]
name = "rank_biased_centroids"
version = "0.2.2"
edition = "2021"
license = "MIT"
authors = ["Matthias Petri <Matthias.Petri@gmail.com>"]
readme = "README.md"
keywords = ["rbc", "rank-fusion", "ranking", "combine"]
repository = "https://github.com/mpetri/rank_biased_centroids"
homepage = "https://github.com/mpetri/rank_biased_centroids"
documentation = "https://docs.rs/rank_biased_centroids"
description = """
Rank-Biased Centroids (RBC): A rank fusion method to combine several ranked lists into one by biasing agreement at higher ranks.
"""

[dev-dependencies]
approx = "0.5.1"

[dependencies]
thiserror = "1"
